[package]
name = "helium-etl-lite"
version = "0.1.0"
authors = ["Kyle Bales <masterjedi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "helium_etl_lite"
path = "src/main.rs"

[dependencies]
# helium-jsonrpc = { git = "https://github.com/dewi-alliance/helium-jsonrpc-rs", rev="f4ec1800133d5c04ff36deff2ae2c23f5afe1229" }
helium-jsonrpc = { path = "../dewi/helium-jsonrpc-rs" }
tokio = { version = "1.5.0", features = ["full"] }
config = { version="0", default-features=false, features=["toml"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
http = "0.2.4"
thiserror = "1.0.25"
slog = "2.7"
slog-async = "2.5"
slog-term = "2.6"
triggered = "0.1"
refinery = { version = "0.5.0", features = ["tokio-postgres"] }
structopt = "0.3.22"
tokio-postgres = { version = "0.7.2" }
url = "2.2.2"